--- a/index.css
+++ b/index.css
@@ -22,3 +22,19 @@
     display:grid;
     grid-template-columns: repeat(3, 1fr);
 }
+.header {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#apple {
+    width: 150px;
+    height: 150px;
+    background-color: aqua;
+    border-radius: 10px;
+}
+
+#temp-text {
+    display: none;
+}
